# RemasteredInterface

./: CMakeLists.txt  MainPage.py  Menu.py  README.md  interface.py  mainPage.py  package.xml
config/: example.json  kinova_arm_basic.json  kinova_arm_live.json  kinova_arm_recorded.json
launch/: display_jaco_2.launch  main_page.launch
rviz/: blankconfig.rviz  kinova_arm_basic.rviz
script/: MainPage.py  interface.py  items.py  publish_data.py  sensor.py
stl_meshes/: Main.stl  sensor1.stl  sensor10.stl  sensor11.stl  sensor12.stl  sensor2.stl  sensor3.stl  sensor4.stl  sensor5.stl  sensor6.stl  sensor7.stl  sensor8.stl  sensor9.stl
test/: gui.py  layout_test.ui
